# UARTStreamParsing

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  commit_message.txt  main.cpp  widget.cpp  widget.h  widget.ui
doc/: 使用说明.md
src/codec/: HexTextDecoder.cpp  HexTextDecoder.h
src/config/: ConfigParser.cpp  ConfigParser.h  FrameFieldDef.h
src/datasource/: FileDataSource.cpp  FileDataSource.h  SerialPortManager.cpp  SerialPortManager.h
src/export/: DataExporter.cpp  DataExporter.h
src/parser/: CrcCalculator.cpp  CrcCalculator.h  FrameLayout.cpp  FrameLayout.h  FrameParser.cpp  FrameParser.h  StreamParser.cpp  StreamParser.h
src/worker/: FileParseService.cpp  FileParseService.h  ParseWorker.cpp  ParseWorker.h
src/workflow/: FileParseWorkflow.cpp  FileParseWorkflow.h  ParseExportControlWorkflow.cpp  ParseExportControlWorkflow.h
tests/: tst_streamparser.cpp
